# webcrawler-rust

./: Cargo.toml
.github/prompts/: commit-message.md
src/: crawler.rs  fetcher.rs  main.rs  parser.rs  storage.rs
