[package]
name = "webcrawler-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dashmap = "6.1.0"
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["json"] }
scraper = "0.23.1"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
